tests/negative/gold/block-define-test.gold
tests/negative/block-define-test.toit:7:7: error: Can't return a block from a lambda
    x := :499
      ^~
Compilation failed
